# docs/swagger.yaml
@@ -253,6 +253,27 @@ info:
   title: Backup Manager API
   version: "1.0"
 paths:
+  /executions:
+    get:
+      description: |-
+        Get a history of all backup executions in the system across all profiles.
+        Results are sorted by creation date (newest first).
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_MD2SA_backup-manager_internal_api_dto.ExecutionResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_MD2SA_backup-manager_internal_pkg_apiutil.ErrorResponse'
+      summary: List all backup executions
+      tags:
+      - executions
   /executions/{id}:
     get:
       description: |-
